force-app/main/default/objects/order_event_items_MCPProd__dll/fields/orderEventId__c.field-meta.xml
<CustomField>
    <fullName>orderEventId__c</fullName>
    <label>Order Event Id</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>orderEventId</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>